Fix:Overflow,ratio fix Implemented:
Because:

--- a/src/Pages/Content.css
+++ b/src/Pages/Content.css
@@ -3,7 +3,7 @@
     margin: auto;
     margin-top: 70px;
     display: grid;
-    grid-template-rows: 60vh 30vh;
+    grid-template-rows: 80% 20%;
 }
 
 img {
